# BackTook

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/cli/: CMakeLists.txt  backtookcli.cpp
src/core/: CMakeLists.txt  backupprogressworker.cpp  backupprogressworker.h  btmaincontroller.cpp  btmaincontroller.h  jsonparser.cpp  jsonparser.h  main.cpp
src/gui/: CMakeLists.txt  btaddbackupconfigdialog.cpp  btaddbackupconfigdialog.h  btaddbackupconfigdialog.ui  btbackupprogressdialog.cpp  btbackupprogressdialog.h  btbackupprogressdialog.ui  btmainwindow.cpp  btmainwindow.h  btmainwindow.ui
src/gui/styles/: CMakeLists.txt  basestyle.cpp  basestyle.h  darkstyle.cpp  darkstyle.h  lightstyle.cpp  lightstyle.h
src/include/: CMakeLists.txt  defines.h
src/resources/: CMakeLists.txt  pic.qrc  stylesheet.qrc
src/resources/stylesheet/: btaddbackupconfigdialog.css  btaddbackupconfigdialog_dark.css  btaddbackupconfigdialog_light.css  btbackupprogressdialog_dark.css  btbackupprogressdialog_light.css  btmainwindow_dark.css  btmainwindow_light.css
src/utils/: CMakeLists.txt  copyhelper.cpp  copyhelper.h  iconinstaller.cpp  iconinstaller.h  qssinstaller.cpp  qssinstaller.h
